test/invalid/baseline/extattr-empty.txt
Syntax error at line 1 in extattr-empty.webidl:
[]
 ^ Found an empty extended attribute list
